@@ -166,6 +166,10 @@ documents those changes that are of interest to users and admins.
 =========================
  -- In sched/wiki and sched/wiki2, support non-zero UPDATE_TIME specification
     for GETNODES and GETJOBS commands.
+ -- Bug fix for sending accounting information multiple times for same 
+    info.  patch from Hongjia Cao (NUDT).
+ -- Spread out in time the EPILOG_COMPLETE messages from slurmd to slurmctld
+    to avoid message congestions and retransmission.
 
 * Changes in SLURM 1.2.23
 =========================
